# NovaTerm

./: .gitignore  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json
.husky/: pre-commit
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/serial/: mod.rs
src/components/: ActivityBar.tsx  LogMonitor.tsx  MacroManager.tsx  MacroPanel.tsx  MainPanel.tsx  SendController.tsx  SettingsPage.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
src/components/common/: CollapsibleSection.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
